# image_converter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  cmake_generation.bat
GUI/: CMakeLists.txt  main.qml  qml.qrc
TUI/: CMakeLists.txt  main.cpp  main.qml
core/: CMakeLists.txt
image_converter_with_GUI/: CMakeLists.txt  main.cpp
image_converter_with_consoloe/: CMakeLists.txt
