cmake_minimum_required(VERSION 3.14)

project(core LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

add_library(core SHARED
  core_global.h
  core.cpp
  core.h
)

target_link_libraries(core PRIVATE Qt${QT_VERSION_MAJOR}::Core)

target_compile_definitions(core PRIVATE CORE_LIBRARY)
